@@ -1223,7 +1223,7 @@ BEGIN
     RTEXT           "Static",IDC_ZUSERHANDLES_V,193,122,54,8,SS_ENDELLIPSIS
 END
 
-IDD_OPTADVANCED DIALOGEX 0, 0, 250, 75
+IDD_OPTADVANCED DIALOGEX 0, 0, 250, 85
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Advanced"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
@@ -1233,8 +1233,10 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,19,99,10
     CONTROL         "Hide unnamed handles",IDC_HIDEUNNAMEDHANDLES,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,31,88,10
     CONTROL         "Replace Task Manager with Process Hacker",IDC_REPLACETASKMANAGER,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,42,154,10
-    PUSHBUTTON      "Change...",IDC_CHANGE,161,40,62,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,60,154,10
+    PUSHBUTTON      "Change...",IDC_CHANGE,161,58,62,14
+    CONTROL         "Check images for digital signatures and packing",IDC_ENABLESTAGE2,
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,42,167,10
 END
 
 IDD_SYSINFO_PANEL DIALOGEX 0, 0, 387, 148
@@ -1776,7 +1778,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 243
         TOPMARGIN, 7
-        BOTTOMMARGIN, 68
+        BOTTOMMARGIN, 78
     END
 
     IDD_GDIHANDLES, DIALOG
